# url-shortener

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOYMENT.md  Dockerfile  README.md  URL_SHORTENER_PRODUCT_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-aws.yml  terraform-control.yml
aws/: apprunner.yaml
infra/aws/: github-actions-deploy-policy.json
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
migrations/postgres/: 001_initial_schema.sql
shortener/: auth.py  config.py  db.py  errors.py  http_api.py  logging_utils.py  main.py  rate_limit.py  service.py  validation.py  worker.py
tests/: test_service.py
